Fixed a z-index problem.

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ cursor: pointer;
   border-radius: 10px;
   border: 2px solid rgb(124, 123, 123);
   display: none;
+  z-index: 100;
 }
 
 .close-info-popup {
